--- a/shah.manali/initializr/img/manalishah.com.html
+++ b/shah.manali/initializr/img/manalishah.com.html
@@ -1,23 +1,20 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
+<!DOCTYPE html>
+<!-- saved from url=(0056)http://manalishah.com/aau/wnm617/shah.manali/initializr/ -->
+<html class="no-js" lang=""><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="http://manalishah.com/aau/wnm617/shah.manali/initializr/apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-                <link rel="stylesheet" href="css/theme.css">
-                <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./manalishah.com_files/normalize.min.css">
+        <!-- <link rel="stylesheet" href="css/main.css"> -->
+                <link rel="stylesheet" href="./manalishah.com_files/theme.css">
+                <link href="./manalishah.com_files/css2" rel="stylesheet">
 
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script type="text/javascript" async="" src="./manalishah.com_files/ga.js"></script><script src="./manalishah.com_files/analytics.js"></script><script src="./manalishah.com_files/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -29,9 +26,9 @@
                 <h1 class="title">h1.title</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="http://manalishah.com/aau/wnm617/shah.manali/initializr/#">nav ul li a</a></li>
+                        <li><a href="http://manalishah.com/aau/wnm617/shah.manali/initializr/#">nav ul li a</a></li>
+                        <li><a href="http://manalishah.com/aau/wnm617/shah.manali/initializr/#">nav ul li a</a></li>
                     </ul>
                 </nav>
             </header>
@@ -73,10 +70,10 @@
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="./manalishah.com_files/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/main.js"></script>
+        <script src="./manalishah.com_files/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
@@ -87,5 +84,6 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
-    </body>
-</html>
+    
+
+</body></html>
