--- a/shah.manali/index.html
+++ b/shah.manali/index.html
@@ -12,6 +12,8 @@
    </style>
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
+      <script src="js/signin.js"></script>
+
    <script src="js/app.js"></script>
 
    <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
@@ -34,7 +36,7 @@
                <input id="signin-password" type="password" class="form-input" data-role="none" placeholder="Type your password">
             </div>
             <div class="form-control">
-               <a href="#recent-page" class="form-button">Sign In</a>
+               <input type="submit" class="form-button" value="Sign In" data-role="none">
             </div>
             <div class="form-control signin-alt">
                Don't have an account?
@@ -72,6 +74,15 @@
 
    <section data-role="page" id="recent-page">
       <div data-role="main">
+           <div class="floater bottom right">
+             <a href="#" class="btn-circle" data-activate="#recent-add-modal">&plus;</a>
+         </div>
+
+         <div class="modal" id="recent-add-modal">
+            <div class="modal-back" data-deactivate="#recent-add-modal"></div>
+            <div class="modal-drawer">
+               <div class="modal-head"></div>
+               <div class="modal-body"></div>
       </div>
       <footer data-role="footer">
          <ul>
@@ -85,11 +96,66 @@
    <section data-role="page" id="list-page">
       <header data-role="header">
          <h1>List Page</h1>
+          <ul>
+            <li class="flex-stretch"></li>
+           <li><a href="#" data-activate="#list-add-modal">&plus;</a></li>         
+        </ul>
+         
       </header>
       <div data-role="main">
           <ul>
             <!-- li*10>a[href=#plant-profile-page]{Animal $} -->
             <li><a href="#plant-profile-page">Plant 1</a></li>
+            <li><a href="#plant-profile-page">Plant 2</a></li>
+            <li><a href="#plant-profile-page">Plant 3</a></li>
+            <li><a href="#plant-profile-page">Plant 4</a></li>
+            <li><a href="#plant-profile-page">Plant 5</a></li>
+            <li><a href="#plant-profile-page">Plant 6</a></li>
+            <li><a href="#plant-profile-page">Plant 7</a></li>
+            <li><a href="#plant-profile-page">Plant 8</a></li>
+            <li><a href="#plant-profile-page">Plant 9</a></li>
+            <li><a href="#plant-profile-page">Plant 10</a></li>
+            <li><a href="#plant-profile-page">Plant 1</a></li>
+            <li><a href="#plant-profile-page">Plant 2</a></li>
+            <li><a href="#plant-profile-page">Plant 3</a></li>
+            <li><a href="#plant-profile-page">Plant 4</a></li>
+            <li><a href="#plant-profile-page">Plant 5</a></li>
+            <li><a href="#plant-profile-page">Plant 6</a></li>
+            <li><a href="#plant-profile-page">Plant 7</a></li>
+            <li><a href="#plant-profile-page">Plant 8</a></li>
+            <li><a href="#plant-profile-page">Plant 9</a></li>
+            <li><a href="#plant-profile-page">Plant 10</a></li>
+            <li><a href="#plant-profile-page">Plant 1</a></li>
+            <li><a href="#plant-profile-page">Plant 2</a></li>
+            <li><a href="#plant-profile-page">Plant 3</a></li>
+            <li><a href="#plant-profile-page">Plant 4</a></li>
+            <li><a href="#plant-profile-page">Plant 5</a></li>
+            <li><a href="#plant-profile-page">Plant 6</a></li>
+            <li><a href="#plant-profile-page">Plant 7</a></li>
+            <li><a href="#plant-profile-page">Plant 8</a></li>
+            <li><a href="#plant-profile-page">Plant 9</a></li>
+            <li><a href="#plant-profile-page">Plant 10</a></li>
+                <li><a href="#plant-profile-page">Plant 1</a></li>
+            <li><a href="#plant-profile-page">Plant 2</a></li>
+            <li><a href="#plant-profile-page">Plant 3</a></li>
+            <li><a href="#plant-profile-page">Plant 4</a></li>
+            <li><a href="#plant-profile-page">Plant 5</a></li>
+            <li><a href="#plant-profile-page">Plant 6</a></li>
+            <li><a href="#plant-profile-page">Plant 7</a></li>
+            <li><a href="#plant-profile-page">Plant 8</a></li>
+            <li><a href="#plant-profile-page">Plant 9</a></li>
+            <li><a href="#plant-profile-page">Plant 10</a></li>
+                <li><a href="#plant-profile-page">Plant 1</a></li>
+            <li><a href="#plant-profile-page">Plant 2</a></li>
+            <li><a href="#plant-profile-page">Plant 3</a></li>
+            <li><a href="#plant-profile-page">Plant 4</a></li>
+            <li><a href="#plant-profile-page">Plant 5</a></li>
+            <li><a href="#plant-profile-page">Plant 6</a></li>
+            <li><a href="#plant-profile-page">Plant 7</a></li>
+            <li><a href="#plant-profile-page">Plant 8</a></li>
+            <li><a href="#plant-profile-page">Plant 9</a></li>
+            <li><a href="#plant-profile-page">Plant 10</a></li>
+                <li><a href="#plant-profile-page">Plant 1</a></li>
             <li><a href="#plant-profile-page">Plant 2</a></li>
             <li><a href="#plant-profile-page">Plant 3</a></li>
             <li><a href="#plant-profile-page">Plant 4</a></li>
@@ -109,12 +175,21 @@
             <li><a href="#user-profile-page">Profile</a></li>
          </ul>
       </footer>
+
+         <div class="modal" id="list-add-modal">
+        <div class="modal-back" data-deactivate="#list-add-modal"></div>
+         <div class="modal-popup">
+            <div class="modal-head">head</div>
+            <div class="modal-body">body</div>
+            <div class="modal-foot">foot</div>
+         </div>
+      </div>
    </section>
 
    <section data-role="page" id="user-profile-page">
       <div data-role="main">
          <h1>User Profile</h1>
-         <p><a href="#signin-page" class="ui-link">Logout</a></p>
+         <p><a href="#" class="js-logout">Logout</a></p>
       </div>
       <footer data-role="footer">
          <ul>
@@ -123,6 +198,9 @@
             <li><a href="#user-profile-page">Profile</a></li>
          </ul>
       </footer>
+
+
+
    </section>
 
    <section data-role="page" id="plant-profile-page">
