--- a/shah.manali/index.html
+++ b/shah.manali/index.html
@@ -7,13 +7,10 @@
 
    <link rel="stylesheet" href="lib/css/jquery.mobile.structure-1.4.5.min.css">
    <link rel="stylesheet" href="css/app.css">
-   <style>
-  @import url("https://use.typekit.net/ntm8bpb.css");
-   </style>
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
-      <script src="js/signin.js"></script>
 
+   <script src="js/signin.js"></script>
    <script src="js/app.js"></script>
 
    <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
@@ -23,8 +20,8 @@
 
    <section data-role="page" id="signin-page">
       <div data-role="main" class="display-flex flex-column">
-<div class="flex-stretch display-flex flex-align-center flex-justify-center">
-           <img src="img/logo.svg" class="icon" style="width:120vw;height:120vw;">
+         <div class="flex-stretch display-flex flex-align-center flex-justify-center">
+            <img src="img/logo.svg" class="icon" style="width:120vw;height:120vw;">
          </div>
          <form id="signin-form" data-ajax="false">
             <div class="form-control">
@@ -43,6 +40,12 @@
                <a href="#signup-page">Sign Up</a>
             </div>
          </form>
+      </div>
+
+      <div class="modal" id="sigin-warning-modal">
+         <div class="modal-toast top"  data-deactivate="#signin-warning-modal">
+            <div class="message">Message</div>
+         </div>
       </div>
    </section>
 
@@ -74,15 +77,17 @@
 
    <section data-role="page" id="recent-page">
       <div data-role="main">
-           <div class="floater bottom right">
-             <a href="#" class="btn-circle" data-activate="#recent-add-modal">&plus;</a>
+         <div class="floater bottom right">
+            <a href="#" class="btn-circle" data-toggle="#recent-add-modal">&equiv;</a>
          </div>
 
+
          <div class="modal" id="recent-add-modal">
-            <div class="modal-back" data-deactivate="#recent-add-modal"></div>
-            <div class="modal-drawer">
-               <div class="modal-head"></div>
-               <div class="modal-body"></div>
+            <div class="modal-drawer left">
+               <div class="modal-head">head</div>
+               <div class="modal-body">body</div>
+            </div>
+         </div>
       </div>
       <footer data-role="footer">
          <ul>
@@ -96,77 +101,29 @@
    <section data-role="page" id="list-page">
       <header data-role="header">
          <h1>List Page</h1>
-          <ul>
+         <ul>
             <li class="flex-stretch"></li>
-           <li><a href="#" data-activate="#list-add-modal">&plus;</a></li>         
-        </ul>
-         
+            <li><a href="#" data-activate="#list-add-modal">&plus;</a></li>
+         </ul>
       </header>
       <div data-role="main">
-          <ul>
-            <!-- li*10>a[href=#plant-profile-page]{Animal $} -->
-            <li><a href="#plant-profile-page">Plant 1</a></li>
-            <li><a href="#plant-profile-page">Plant 2</a></li>
-            <li><a href="#plant-profile-page">Plant 3</a></li>
-            <li><a href="#plant-profile-page">Plant 4</a></li>
-            <li><a href="#plant-profile-page">Plant 5</a></li>
-            <li><a href="#plant-profile-page">Plant 6</a></li>
-            <li><a href="#plant-profile-page">Plant 7</a></li>
-            <li><a href="#plant-profile-page">Plant 8</a></li>
-            <li><a href="#plant-profile-page">Plant 9</a></li>
-            <li><a href="#plant-profile-page">Plant 10</a></li>
-            <li><a href="#plant-profile-page">Plant 1</a></li>
-            <li><a href="#plant-profile-page">Plant 2</a></li>
-            <li><a href="#plant-profile-page">Plant 3</a></li>
-            <li><a href="#plant-profile-page">Plant 4</a></li>
-            <li><a href="#plant-profile-page">Plant 5</a></li>
-            <li><a href="#plant-profile-page">Plant 6</a></li>
-            <li><a href="#plant-profile-page">Plant 7</a></li>
-            <li><a href="#plant-profile-page">Plant 8</a></li>
-            <li><a href="#plant-profile-page">Plant 9</a></li>
-            <li><a href="#plant-profile-page">Plant 10</a></li>
-            <li><a href="#plant-profile-page">Plant 1</a></li>
-            <li><a href="#plant-profile-page">Plant 2</a></li>
-            <li><a href="#plant-profile-page">Plant 3</a></li>
-            <li><a href="#plant-profile-page">Plant 4</a></li>
-            <li><a href="#plant-profile-page">Plant 5</a></li>
-            <li><a href="#plant-profile-page">Plant 6</a></li>
-            <li><a href="#plant-profile-page">Plant 7</a></li>
-            <li><a href="#plant-profile-page">Plant 8</a></li>
-            <li><a href="#plant-profile-page">Plant 9</a></li>
-            <li><a href="#plant-profile-page">Plant 10</a></li>
-                <li><a href="#plant-profile-page">Plant 1</a></li>
-            <li><a href="#plant-profile-page">Plant 2</a></li>
-            <li><a href="#plant-profile-page">Plant 3</a></li>
-            <li><a href="#plant-profile-page">Plant 4</a></li>
-            <li><a href="#plant-profile-page">Plant 5</a></li>
-            <li><a href="#plant-profile-page">Plant 6</a></li>
-            <li><a href="#plant-profile-page">Plant 7</a></li>
-            <li><a href="#plant-profile-page">Plant 8</a></li>
-            <li><a href="#plant-profile-page">Plant 9</a></li>
-            <li><a href="#plant-profile-page">Plant 10</a></li>
-                <li><a href="#plant-profile-page">Plant 1</a></li>
-            <li><a href="#plant-profile-page">Plant 2</a></li>
-            <li><a href="#plant-profile-page">Plant 3</a></li>
-            <li><a href="#plant-profile-page">Plant 4</a></li>
-            <li><a href="#plant-profile-page">Plant 5</a></li>
-            <li><a href="#plant-profile-page">Plant 6</a></li>
-            <li><a href="#plant-profile-page">Plant 7</a></li>
-            <li><a href="#plant-profile-page">Plant 8</a></li>
-            <li><a href="#plant-profile-page">Plant 9</a></li>
-            <li><a href="#plant-profile-page">Plant 10</a></li>
-                <li><a href="#plant-profile-page">Plant 1</a></li>
-            <li><a href="#plant-profile-page">Plant 2</a></li>
-            <li><a href="#plant-profile-page">Plant 3</a></li>
-            <li><a href="#plant-profile-page">Plant 4</a></li>
-            <li><a href="#plant-profile-page">Plant 5</a></li>
-            <li><a href="#plant-profile-page">Plant 6</a></li>
-            <li><a href="#plant-profile-page">Plant 7</a></li>
-            <li><a href="#plant-profile-page">Plant 8</a></li>
-            <li><a href="#plant-profile-page">Plant 9</a></li>
-            <li><a href="#plant-profile-page">Plant 10</a></li>
-         </ul>
-      </div>
+         <div class="overscroll"> 
+            <ul class="grid-container">
+               <!-- li*10>a[href=#plant-profile-page]{plant $} -->
+               <li><img src="img/plant1.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 1</a></li>
+               <li><img src="img/plant2.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 2</a></li>
+               <li><img src="img/plant3.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 3</a></li>
+               <li><img src="img/plant4.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 4</a></li>
+               <li><img src="img/plant5.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 5</a></li>
+               <li><img src="img/plant6.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 6</a></li>
+               <li><img src="img/plant7.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 7</a></li>
+               <li><img src="img/plant8.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 8</a></li>
+               <li><img src="img/plant9.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 9</a></li>
+               <li><img src="img/plant10.jpeg" alt="plant1" style="width:4em;height:4em;border-radius:2rem;"><a href="#plant-profile-page">plant 10</a></li>
+         
+            </ul>
+            </div>
+         </div>
       </div>
       <footer data-role="footer">
          <ul>
@@ -176,8 +133,8 @@
          </ul>
       </footer>
 
-         <div class="modal" id="list-add-modal">
-        <div class="modal-back" data-deactivate="#list-add-modal"></div>
+      <div class="modal" id="list-add-modal">
+         <div class="modal-back" data-deactivate="#list-add-modal"></div>
          <div class="modal-popup">
             <div class="modal-head">head</div>
             <div class="modal-body">body</div>
@@ -188,7 +145,7 @@
 
    <section data-role="page" id="user-profile-page">
       <div data-role="main">
-         <h1>User Profile</h1>
+         User Profile
          <p><a href="#" class="js-logout">Logout</a></p>
       </div>
       <footer data-role="footer">
@@ -198,20 +155,17 @@
             <li><a href="#user-profile-page">Profile</a></li>
          </ul>
       </footer>
-
-
-
    </section>
 
    <section data-role="page" id="plant-profile-page">
-     <header data-role="header">
-         <h1>Plant Page</h1>
+      <header data-role="header">
+         <h1>plant Page</h1>
          <ul>
             <li><a href="#" data-rel="back">Back</a></li>
          </ul>
       </header>
       <div data-role="main">
-         Plant Profile 
+         plant Profile
       </div>
    </section>
 
