--- a/shah.manali/index.html
+++ b/shah.manali/index.html
@@ -11,6 +11,9 @@
 
    <script src="lib/js/jquery-2.2.4.min.js"></script>
 
+   <script src="js/function.js"></script>
+   <script src="js/pages.js"></script>
+   <script src="js/parts.js"></script>
    <script src="js/signin.js"></script>
    <script src="js/app.js"></script>
 
