--- a/shah.manali/index.html
+++ b/shah.manali/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Succulove</title>
@@ -12,12 +14,17 @@
    <script src="lib/js/jquery-2.2.4.min.js"></script>
 
    <script src="js/function.js"></script>
+   <script src="js/maps.js"></script>
    <script src="js/pages.js"></script>
    <script src="js/parts.js"></script>
    <script src="js/signin.js"></script>
    <script src="js/app.js"></script>
 
    <script src="lib/js/jquery.mobile-1.4.5.min.js"></script>
+    
+   <script defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGIvLtdM_Y0JndIZedikMusJR4HN5mt7c">
+</script>
 
 </head>
 <body>
@@ -120,6 +127,8 @@
 
    <section data-role="page" id="recent-page">
       <div data-role="main">
+        <div class="map"></div>
+
          <div class="floater bottom right">
            <div class="btn-circle" data-activate="#recent-add-modal" data-deactivate="#recent-profile-modal">&plus;</div>
          </div>
