--- a/shah.manali/index.html
+++ b/shah.manali/index.html
@@ -129,17 +129,23 @@
       <div data-role="main">
         <div class="map"></div>
 
-         <div class="floater bottom right">
+<!--          <div class="floater bottom right">
            <div class="btn-circle" data-activate="#recent-add-modal" data-deactivate="#recent-profile-modal">&plus;</div>
          </div>
+ -->
 
-
-         <div class="modal" id="recent-add-modal">
-            <div class="modal-back" data-deactivate="#recent-add-modal"></div>
+        <div class="modal" id="recent-plant-modal">
             <div class="modal-drawer bottom">
-               <div class="modal-head">
+               <div class="modal-close-floater top right">
+                  <div class="btn-circle" data-deactivate="#recent-plant-modal">&times;</div>
+               </div>
+               <div class="modal-head">head</div>
+               <div class="modal-body"></div>
+            </div>
+         </div>
 
-<header data-role="header">
+   
+<!-- <header data-role="header">
          <h1>Add New Location</h1>
         
       </header>
@@ -169,7 +175,7 @@
       </div>
    </div>
 </div>
-</div>
+</div> -->
        <footer data-role="footer" data-template="#footer-template"></footer>
    </section>
 
