updated data, icons, list page, user profile

--- a/shah.manali/index.html
+++ b/shah.manali/index.html
@@ -172,7 +172,7 @@
                <div class="modal-close-floater top right">
                   <div class="btn-circle" data-deactivate="#recent-plant-modal">&times;</div>
                </div>
-               <div class="modal-head">head</div>
+               <!-- <div class="modal-head"></div> -->
                <div class="modal-body"></div>
             </div>
          </div>
