location marker, location profile still working location edit

--- a/shah.manali/index.html
+++ b/shah.manali/index.html
@@ -251,11 +251,11 @@
          </ul>
       </header>
       <div data-role="main" class="display-flex flex-column">
-         <a href="#location-profile-page" class="plant-top">
+         <div class="plant-top">
             <div class="map"></div>
             <div class="floater bottom-right">
                <a href="#location-add-page" class="btn-circle"><img src="img/add_icon.svg" alt class="icon"></a>
-            </a>
+            </div>
          </div>
          <div class="overscroll">
          <div class="plant-bottom"></div>
@@ -370,18 +370,18 @@
             <li><a href="#" data-rel="back"><img src="img/back_icon.svg" alt class="icon"></a></li>
             <li class="flex-stretch"></li>
             <li><a href="#addnew-page" class="nav-icon">
-               <li><a href="#plant-edit-page"><img src="img/edit_icon.svg" alt class="icon"></a></li>
+               <li><a href="#location-edit-page"><img src="img/edit_icon.svg" alt class="icon"></a></li>
          </ul>
       </header>
       <div data-role="main" class="display-flex flex-column">
    
          <div class="overscroll">
-         <div class="location-profile"></div>
+         <div class="location-profile">
 
          <div class="profile">
             <!-- <img src="img/violet.jpeg" alt="plant1"> -->
          </div>
-          
+          </div>
               </div>
          </div>
       </div>
@@ -392,11 +392,11 @@
 
    <section data-role="page" id="location-edit-page">
       <header data-role="header">
-         <h1>Plant Info</h1>
+         <h1>Edit Location</h1>
          <ul>
             <li><a href="#" data-rel="back"><img src="img/back_icon.svg" alt class="icon"></a></li>
             <li class="flex-stretch"></li>
-            <li><a href="#" class="js-plant-delete"><img src="img/delete_icon.svg" alt class="icon"></a></li>
+            <li><a href="#" class="js-location-edit"><img src="img/save_icon.svg" alt class="icon"></a></li>
          </ul>
       </header>
       <div data-role="main" class="display-flex flex-column">
